Java 25 and some code quality improvement